add: add, remove recipe from/to favorite and get list of favorite recipes with swagger doc
